アイコン追加/一括選択

--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,14 @@
 {
   "manifest_version": 3,
-  "name": "秋月電子 領収書エクスポーター",
+  "name": "秋月電子 Receipt Exporter",
   "version": "1.0",
   "description": "秋月電子通商の注文履歴から領収書・納品書・請求書を一括ダウンロードします。",
+  "icons": {
+    "16": "icons/icon_16.png",
+    "32": "icons/icon_32.png",
+    "48": "icons/icon_48.png",
+    "128": "icons/icon_128.png"
+  },
   "permissions": [
     "activeTab",
     "downloads",
@@ -14,7 +20,13 @@
     "https://docs.google.com/*"
   ],
   "action": {
-    "default_popup": "popup.html"
+    "default_popup": "popup.html",
+    "default_icon": {
+      "16": "icons/icon_16.png",
+      "32": "icons/icon_32.png",
+      "48": "icons/icon_48.png",
+      "128": "icons/icon_128.png"
+    }
   },
   "options_page": "options.html",
   "content_scripts": [
